# ds-agents

./: .env.example  .gitignore  README.md  app.py  prompts.yaml  pyproject.toml  requirements.txt
data/: sample_sales.csv
src/agents/: __init__.py  analyzer.py  coder.py  debugger.py  finalyzer.py  planner.py  router.py  verifier.py
src/graph/: state.py  workflow.py
src/providers/: azure.py
src/utils/: code_executor.py  prompts.py
